[package]
name = "icp-eth"
version = "0.2.1"
description = "ICP + Ethereum cross-chain utilities"
authors = ["Ryan Vandersmith"]
repository = "https://github.com/rvanasa/icp-eth-rust"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["canpack"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
canpack = { version = "^0.1", optional = true }
url = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ethers-core = "2.0"
getrandom = { version = "0.2", features = ["custom"] }
